# polygon-width

./: .gitignore  Cargo.toml  README.md  index.html
assets/: backend_bg.wasm  index-162cf902.css  index-9e4837c1.css  index-e2667f38.css  index-f128ce18.css  main-0a8e1806.js  main-0f2fb9b4.js  main-0febcecb.js  main-1af1a547.js  main-20050a7c.js  main-223d47fd.js  main-294ea1ae.js  main-372e2b0f.js  main-3ebfb3d1.js  main-59b57568.js  main-61223c95.js  main-8080fd4c.js  main-8d72a4da.js  main-9b41af5d.js  main-9cd14081.js  main-a61989c8.js  main-a96507c4.js  main-ab093439.js  main-af05ad9b.js  main-ec662c05.js  main-f2876e59.js  main-f8be93ae.js
backend/: Cargo.toml
backend/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
src/: join_lines.rs  main.rs  pavement.rs
test_cases/: README.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  OptionalNumber.svelte  Settings.svelte  stores.ts  test_cases.ts  zorder.ts
widths/: Cargo.toml
widths/src/: join_lines.rs  lib.rs  mercator.rs  split_line.rs  step_along_line.rs  utils.rs
