[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
gdal = "0.16.0"
geo = "0.28.0"
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
rayon = "1.10.0"
serde_json = "1.0.117"
widths = { path = "../widths" }

[profile.dev.package."*"]
opt-level = 3
