[package]
name = "widths"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
geo = { git = "https://github.com/dabreegster/geo", branch = "boolops_and_linesplit" }
geo-buffer = { git = "https://github.com/MarcioOrdonez/geo-buffer", branch = "chore/bump-geo-version-to-v.0.25.0" }
geojson = { git = "https://github.com/georust/geojson", features = ["geo-types"] }
log = "0.4.21"
petgraph = "0.6.5"
serde = { version = "1.0.203", features = ["derive"] }
